--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,11 @@ edition = "2021"
 
 [dependencies]
 chrono = {version = "0.4.23", features = ["serde"]}
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.93"
+serde = { version = "1.0", features = ["derive"], optional = true }
+serde_json = { version = "1.0.93", optional = true }
+
+[features]
+serde = [
+  "dep:serde",
+  "dep:serde_json"
+]
