--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,12 @@ version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-chrono = {version = "0.4.23", features = ["serde"]}
+chrono = { version = "0.4.23", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0.93", optional = true }
 
+[dev-dependencies]
+rand = "0.8.5"
+
 [features]
-serde = [
-  "dep:serde",
-  "dep:serde_json"
-]
+serde = ["dep:serde", "dep:serde_json"]
