--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "fsrs"
-version = "1.0.0"
+version = "1.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = {version = "0.4.23", features = ["serde"]}
+chrono = { version = "0.4.23", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0.93", optional = true }
 
+[dev-dependencies]
+rand = "0.8.5"
+
 [features]
-serde = [
-  "dep:serde",
-  "dep:serde_json"
-]
+serde = ["dep:serde", "dep:serde_json"]
