--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "fsrs"
 version = "1.2.1"
 edition = "2021"
+license-file = "LICENSE"
+description = "Rust-based Scheduler for FSRS"
+
 
 [dependencies]
 chrono = { version = "0.4.23", features = ["serde"] }
